Closed Bug 1707815 Opened 4 years ago Closed 4 years ago

Flickering rectangles on Mali-T830

Categories

(Core :: Graphics: WebRender, defect)

Firefox 88
Unspecified
Android
defect

Tracking

()

RESOLVED FIXED
90 Branch
Tracking Status
firefox88 + fixed
firefox89 + fixed
firefox90 + fixed

People

(Reporter: jnicol, Assigned: jnicol)

References

Details

Attachments

(3 files)

Attached file about:support

From bug 1707467 comment 7

I'm not sure if what I'm seeing is the same problem but it seems similar.

Attaching about:support file, a video file that demonstrates the problem and device details below. I see it even if I disable addons (just one, ublock origin, is installed).

Let me know if I should open a new bug.

Device: Huawei Honor 6.x (BLN-22)
Android version: 6.0
GPU : Mali T-830

Thanks for reporting the issue! I think I know what the problem is.

To confirm, could you please install either Firefox Beta or Nightly. You should still see the issue. Then go to about:config, search for gfx.webrender.allow-partial-present-buffer-age and set it to false. Then restart the browser (by swiping it away in the app switcher). When you restart hopefully the problem should be gone. Could you please confirm for me whether that is the case? Thanks!

Flags: needinfo?(shiral.software)

[Tracking Requested - why for this release]: Annoying flickering for affected devices

If the option in comment 2 does indeed solve this issue, then it will be the same underlying issue as bug 1680087.

In that bug we saw it on a Mali-T6xx running Android 6, and a Mali-T7xx running Android 7.1. Here we have a Mali-T8xx running Android 6.

We previously disabled partial present for T6xx and T7xx. Looks like we should change that to all Mali-Txxx, for Android 7.1 and below

(In reply to Jamie Nicol [:jnicol] from comment #2)

Thanks for reporting the issue! I think I know what the problem is.

To confirm, could you please install either Firefox Beta or Nightly. You should still see the issue. Then go to about:config, search for gfx.webrender.allow-partial-present-buffer-age and set it to false. Then restart the browser (by swiping it away in the app switcher). When you restart hopefully the problem should be gone. Could you please confirm for me whether that is the case? Thanks!

Can confirm that disabling this flag fixed the problem and enabling it brought it back in Firefox Nightly.

Flags: needinfo?(shiral.software)

(In reply to Jamie Nicol [:jnicol] from comment #4)

If the option in comment 2 does indeed solve this issue, then it will be the same underlying issue as bug 1680087.

In that bug we saw it on a Mali-T6xx running Android 6, and a Mali-T7xx running Android 7.1. Here we have a Mali-T8xx running Android 6.

We previously disabled partial present for T6xx and T7xx. Looks like we should change that to all Mali-Txxx, for Android 7.1 and below

I've been keeping Firefox updated regularly. FF 87 did not show this problem on this phone. Got this flickering problem only from last 3 days after latest update.

Great, thanks for testing!

I've been keeping Firefox updated regularly. FF 87 did not show this problem on this phone. Got this flickering problem only from last 3 days after latest update.

Yes, that makes perfect sense. Your device will have switched to the new rendering engine, webrender, in 88 (in bug 1507074). And webrender tries to use this "partial present" feature, but it's buggy on some Mali drivers.

In bug 1680087 we disabled webrender's partial present feature on
Mali-T6xx and T7xx devices due to rendering issues caused by a buggy
implementation in the driver. We have now seen reports of the same
issue on a Mali-T8xx device.

This patch expands the block to include all Mali-Txxx devices. As a
follow up we should make this dependent on the driver version, so
that users with working drivers can take advantage of the feature.

Assignee: nobody → jnicol
Status: NEW → ASSIGNED
Pushed by jnicol@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/ff631a6df7aa Block partial present on all Mali-Txxx devices. r=nical

Comment on attachment 9218583 [details]
Bug 1707815 - Block partial present on all Mali-Txxx devices. r?nical

Beta/Release Uplift Approval Request

  • User impact if declined: Flickering rectangles on screen for users with affected devices (Some Mali-T8xx GPUs)
  • Is this code covered by automated tests?: Yes
  • Has the fix been verified in Nightly?: No
  • Needs manual test from QE?: No
  • If yes, steps to reproduce:
  • List of other uplifts needed: None
  • Risk to taking this patch: Low
  • Why is the change risky/not risky? (and alternatives if risky): Expands existing block to include another GPU
  • String changes made/needed:
Attachment #9218583 - Flags: approval-mozilla-release?
Attachment #9218583 - Flags: approval-mozilla-beta?

Thank you Jamie for the quick diagnosis and correction!
Let me also take this opportunity to say a big thanks to you and all Firefox devs for supporting this excellent software on older platforms too so well.

Thank you for the kind words. You're very welcome!

Status: ASSIGNED → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → 90 Branch

Comment on attachment 9218583 [details]
Bug 1707815 - Block partial present on all Mali-Txxx devices. r?nical

Approved for Fenix 89 beta3, thanks.

Attachment #9218583 - Flags: approval-mozilla-beta? → approval-mozilla-beta+

Hi, I'm not sure if thats the right place to post this. Just to inform you that on Galaxy J7 2017 (Mali T830 MP1) Android 9, partial present works correctly.

Yeah, it works for me on all of my Mali-T devices too. Unfortunately there's just too many reports of it being broken on a variety of devices that we have to disable it for now. Hopefully we can figure out precisely which driver versions to block in the future.

Sure I get it, just wanted to help :)

Much appreciated :)

If you could share your driver version that could help! If you go to about:support and search for "Driver Version". It should be something like OpenGL ES 3.2 v1r22p0rel0.abcdefg

I have this in driver version: OpenGL ES 3.2 v1.r28p0-01rel0.###other-sha0123456789ABCDEF0###

Comment on attachment 9218583 [details]
Bug 1707815 - Block partial present on all Mali-Txxx devices. r?nical

Approved for Fenix 88.1.3 & Focus 8.15.3.

Attachment #9218583 - Flags: approval-mozilla-release? → approval-mozilla-release+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: