Bug 1707815 - Block partial present on all Mali-Txxx devices. r=nical a=pascalc

In bug 1680087 we disabled webrender's partial present feature on
Mali-T6xx and T7xx devices due to rendering issues caused by a buggy
implementation in the driver. We have now seen reports of the same
issue on a Mali-T8xx device.

This patch expands the block to include all Mali-Txxx devices. As a
follow up we should make this dependent on the driver version, so
that users with working drivers can take advantage of the feature.

Differential Revision: https://phabricator.services.mozilla.com/D113477