gfx/config/gfxConfigManager.cpp
@@ -424,10 +424,9 @@ void gfxConfigManager::ConfigureWebRender() {
       nsString adapter;
       mGfxInfo->GetAdapterDeviceID(adapter);
       // Block partial present on some devices due to rendering issues.
-      // On Mali-T6xx and T7xx GPUs due to bug 1680087.
+      // On Mali-Txxx due to bug 1680087 and bug 1707815.
       // On Adreno 3xx GPUs due to bug 1695771.
-      if (adapter.Find("Mali-T6", /*ignoreCase*/ true) >= 0 ||
-          adapter.Find("Mali-T7", /*ignoreCase*/ true) >= 0 ||
+      if (adapter.Find("Mali-T", /*ignoreCase*/ true) >= 0 ||
           adapter.Find("Adreno (TM) 3", /*ignoreCase*/ true) >= 0) {
         mFeatureWrPartial->Disable(
             FeatureStatus::Blocked, "Partial present blocked",
